[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MainSession/MainSession.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainSession/PointCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Font_Regular24.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/MainSession/Office.tscn" type="PackedScene" id=4]

[node name="MainSession" type="Node2D"]
script = ExtResource( 1 )

[node name="FitCounter" parent="." instance=ExtResource( 2 )]
margin_left = 106.0
margin_top = 108.0
margin_right = 208.0
margin_bottom = 127.0
text = "Fit points"

[node name="DevCounter" parent="." instance=ExtResource( 2 )]
margin_left = 264.0
margin_top = 108.0
margin_right = 366.0
margin_bottom = 127.0
text = "Dev points"

[node name="MarketCounter" parent="." instance=ExtResource( 2 )]
margin_left = 422.0
margin_top = 108.0
margin_right = 524.0
margin_bottom = 127.0

[node name="Office" parent="." instance=ExtResource( 4 )]
position = Vector2( 313, 368 )

[node name="DaysCountdown" type="Label" parent="."]
margin_left = 176.0
margin_top = 564.0
margin_right = 465.0
margin_bottom = 617.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Days left: 112"
align = 1
valign = 1
